# astrorep

./: Dockerfile  README.md  requirements.txt
dags/: .last_sync  720_FL_DAG_IVSP_INCR_20250606_211350.py  720_mappings_IVSP_INCR_20250606_211350.json  767_FL_DAG_MMOSA_SALES_INiT_20251217_150852.py  767_FL_mtd_MMOSA_SALES_INiT_20251217_150852.json  767_mappings_MMOSA_SALES_INiT_20251217_150852.json  768_FL_DAG_MMOSA_MKTG_INiT_20251218_091550.py  768_FL_mtd_MMOSA_MKTG_INiT_20251218_091550.json  768_mappings_MMOSA_MKTG_INiT_20251218_091550.json  769_FL_DAG_MMOSA_MKTG_INCR_20251218_142009.py  769_FL_mtd_MMOSA_MKTG_INCR_20251218_142009.json  769_mappings_MMOSA_MKTG_INCR_20251218_142009.json  770_BV_DAG_MMOSA_BV_INiT_20251218_143610.py  770_BV_mappings_MMOSA_BV_INiT_20251218_143610.json  770_BV_mtd_MMOSA_BV_INiT_20251218_143610.json  BV_DAG_MSALES_BV.py  BV_mappings_MSALES_BV.json  BV_mtd_MSALES_BV.json  FL_DAG_IVSP_INCR.py  FL_DAG_SALES_INIT_REV.py  FL_mtd_SALES_INIT_REV.json  README  (+1 more)
plugins/vs_fmc_plugin/: README.md  __init__.py  setup.cfg
plugins/vs_fmc_plugin/hooks/: bigquery_hook.py  databricks_hook.py  dbt_cli_hook.py  dbt_cloud_hook.py  jdbc_hook.py  kafka_hook.py  livy_hook.py  matillion_hook.py  odi_hook.py  singlestore_hook.py  snowflake_hook.py  spark_sql_hook.py  talend_hook.py
plugins/vs_fmc_plugin/operators/: bigquery_operator.py  databricks_operator.py  dbt_operator.py  external_dag_checker.py  external_dags_sensor.py  jdbc_to_jdbc.py  odi_operator.py  run_once.py  singlestore_operator.py  snowflake_operator.py  spark_sql_operator.py  talend_operator.py
(+10 files in other folders)
