[metadata]
name = airflow-provider-vaultspeed
version = 5.7.1.2
description = A VaultSpeed provider for Apache Airflow
long_description = file: README.md
long_description_content_type = text/markdown

author = VaultSpeed

[options]
packages = find:
python_requires = >=3.6
install_requires =
    croniter >= 0.3
    flask_admin >= 1.5.8
    apache-airflow >= 1.10

[options.entry_points]
# the function get_provider_info is defined in myproviderpackage.somemodule
apache_airflow_provider=
  provider_info=vs_fmc_plugin.__init__:get_provider_info